# meowsynth

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/lib/: glfw3.lib
libs/portaudio/lib/: portaudio.lib
libs/portmidi/lib/: portmidi.lib
src/: audio.hpp  hardware.hpp  main.cpp  openal_audio.cpp  pa_audio.cpp  render.cpp  render.hpp  res_data.h  state.hpp
src/platform/: desktop.cpp  web.cpp
